objects/LLC_BI__Collateral_Type__c.object
<CustomObject>
    <description>The type of a piece of Collateral.</description>
    <fields>
        <fullName>Core_Collateral_Code__c</fullName>
        <label>Core Collateral Code</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LLCLP__Is_Excluded_From_LaserPro_Extract__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Excluded Collateral Type from LaserPro extract</description>
        <inlineHelpText>Excluded Collateral Type from LaserPro extract</inlineHelpText>
        <label>Exclude From LaserPro Extract</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Active__c</fullName>
        <description>This optional field indicates the collateral type. If the collateral type has an expiration date in the past this will be set to false. If the collateral type is inactive, it cannot be selected when adding collateral.</description>
        <formula>TODAY() &lt; LLC_BI__Expire_Date__c || ISBLANK(LLC_BI__Expire_Date__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Advance_Rate__c</fullName>
        <description>This field is manually populated. The percentage of the value of a collateral that a lender is willing to extend for a loan.</description>
        <inlineHelpText>The percentage of the value of a collateral that a lender is willing to extend for a loan.</inlineHelpText>
        <label>Advance Rate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Category__c</fullName>
        <description>This field is used to classify a piece of collateral to a specific category.</description>
        <label>Category</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>LLC_BI__Collateral_Category_Type</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>LLC_BI__Collateral_Code__c</fullName>
        <description>This field is manually populated. The code for a piece of Collateral.</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>The code for a piece of Collateral.</inlineHelpText>
        <label>Collateral Code</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Collateral_Configuration__c</fullName>
        <description>This field is manually populated. It holds the configuration data for the complex collateral user interface. It will contain information about screen to function mappings and field set types to use for collateral copy and cloning operations.</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Complex Collateral configuration and control data</inlineHelpText>
        <label>Collateral Configuration</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Condo_PUD__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This optional field specifies if the collateral is a condo or planned unit development. It is manually populated.</description>
        <label>Condo/PUD</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Expire_Date__c</fullName>
        <description>This field is manually populated. The date that this type of collateral is no longer valid.</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>The date that this type of collateral is no longer valid.</inlineHelpText>
        <label>Expire Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Field_Set__c</fullName>
        <description>This field is manually populated. Determines the field set that is used for this Collateral Type on the Manage Collateral Page</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Determines the field set that is used for this Collateral Type on the Manage Collateral Page</inlineHelpText>
        <label>Field Set</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Highest_Type__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This lookup field is optional and is used to select the highest level parent record in a hierarchy for the Collateral Type record.</description>
        <label>Highest Type</label>
        <referenceTo>LLC_BI__Collateral_Type__c</referenceTo>
        <relationshipLabel>Collateral Types (Highest Type)</relationshipLabel>
        <relationshipName>HighestTypes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Icon_Background_Color__c</fullName>
        <description>Defines the hexadecimal color for the background of the Icon.</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Please enter a hexadecimal color.</inlineHelpText>
        <label>Icon Background Color</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Icon_Color__c</fullName>
        <defaultValue>&quot;#ffffff&quot;</defaultValue>
        <description>Defines the hexadecimal color for the background of the Icon.</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Please enter a hexadecimal color.</inlineHelpText>
        <label>Icon Color</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Icon_Type__c</fullName>
        <description>Defines the icon type for this record. The entry must include the following pattern: folderName/iconName. For example to display the &quot;client&quot; icon from the standard folder enter &apos;standard/client&apos;.</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Please enter the icon folder name then a &quot;/&quot; followed by the icon name. Example &quot;standard/client&quot;</inlineHelpText>
        <label>Icon Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Is_Complex__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This optional boolean field is used to determine if the record has a parent-child relationship. The default is false, where the record does not have a parent-child relationship.</description>
        <label>Is Complex</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Leasing_Screen__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Administrators populate this optional text field with the screen that displays when users add or edit an asset on a lease. By default, the value is blank.</description>
        <inlineHelpText>Use this optional field to define the screen that displays when users add or edit an asset on a lease. If a screen is not defined, the LLC_BI_Screen_c screen will be used by default.</inlineHelpText>
        <label>Leasing Screen</label>
        <referenceTo>nFORCE__Screen__c</referenceTo>
        <relationshipLabel>Leasing Screen</relationshipLabel>
        <relationshipName>Leasing_Screen</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Manufactured_Home__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field defaults to false and is manually populated. is a checkbox to be marked if this piece of collateral is a manufactured home.</description>
        <inlineHelpText>This is a checkbox to be marked if this piece of collateral is a manufactured home.</inlineHelpText>
        <label>Manufactured Home</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Parent_Type__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This lookup field is optional and is used to select a parent record for the Collateral Type record. Information provided on a child record rolls up to the parent collateral for valuation.</description>
        <label>Parent Type</label>
        <referenceTo>LLC_BI__Collateral_Type__c</referenceTo>
        <relationshipLabel>Collateral Types</relationshipLabel>
        <relationshipName>Parent_Types</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Regulatory_Rate__c</fullName>
        <description>This field is manually populated. Regulatory Advance Rate, typically used for real estate. An advance rate above this will require specific reporting.</description>
        <inlineHelpText>Regulatory Advance Rate, typically used for real estate. An advance rate above this will require specific reporting.</inlineHelpText>
        <label>Regulatory Rate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Screen__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Administrators populate this optional text field with the screen that displays when users add or edit collateral on a loan.</description>
        <inlineHelpText>Use this optional text field to define the screen that displays when users add or edit collateral on a loan.</inlineHelpText>
        <label>Screen</label>
        <referenceTo>nFORCE__Screen__c</referenceTo>
        <relationshipLabel>Collateral Types</relationshipLabel>
        <relationshipName>Collateral_Types</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Start_Date__c</fullName>
        <description>This field is manually populated. The date the collateral type was put into effect.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Subtype__c</fullName>
        <description>This field is manually populated. The subtype of a piece of Collateral.</description>
        <inlineHelpText>The subtype of a piece of Collateral.</inlineHelpText>
        <label>Subtype</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>LLC_BI__Type__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Motor Vehicle</fullName>
                </value>
                <value>
                    <fullName>Pleasure Boat</fullName>
                </value>
                <value>
                    <fullName>Vessel</fullName>
                </value>
                <value>
                    <fullName>Aircraft</fullName>
                </value>
                <value>
                    <fullName>Trailer</fullName>
                </value>
                <value>
                    <fullName>Other Titled</fullName>
                </value>
                <value>
                    <fullName>None</fullName>
                </value>
                <value>
                    <fullName>Savings/CD&apos;s</fullName>
                </value>
                <value>
                    <fullName>Securities</fullName>
                </value>
                <value>
                    <fullName>Note/Instrument</fullName>
                </value>
                <value>
                    <fullName>Receipts/Bills</fullName>
                </value>
                <value>
                    <fullName>Letter of Credit</fullName>
                </value>
                <value>
                    <fullName>Other Possessory</fullName>
                </value>
                <value>
                    <fullName>Life Insurance</fullName>
                </value>
                <value>
                    <fullName>Inventory</fullName>
                </value>
                <value>
                    <fullName>Chattel Paper</fullName>
                </value>
                <value>
                    <fullName>Relationships</fullName>
                </value>
                <value>
                    <fullName>Equipment</fullName>
                </value>
                <value>
                    <fullName>General Intangibles</fullName>
                </value>
                <value>
                    <fullName>Farm Products</fullName>
                </value>
                <value>
                    <fullName>Livestock</fullName>
                </value>
                <value>
                    <fullName>Farm Equipment</fullName>
                </value>
                <value>
                    <fullName>Consumer Goods</fullName>
                </value>
                <value>
                    <fullName>Tort Claim</fullName>
                </value>
                <value>
                    <fullName>Crops</fullName>
                </value>
                <value>
                    <fullName>Fixtures</fullName>
                </value>
                <value>
                    <fullName>Standing Timber</fullName>
                </value>
                <value>
                    <fullName>Minerals, Oil and Gas</fullName>
                </value>
                <value>
                    <fullName>1-4 Family</fullName>
                </value>
                <value>
                    <fullName>Multi-Family</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LLC_BI__Type__c</fullName>
        <description>The type of Collateral.</description>
        <inlineHelpText>The type of Collateral.</inlineHelpText>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Titled</fullName>
                </value>
                <value>
                    <fullName>Real Estate</fullName>
                </value>
                <value>
                    <fullName>UCC</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Possessory</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LLC_BI__Valuation_Source__c</fullName>
        <description>A picklist field used to capture the potential sources of collateral valuation. This would be entered by the user when a new valuation is entered. No default value.</description>
        <inlineHelpText>The potential sources of collateral valuation</inlineHelpText>
        <label>Valuation Source</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Account Balance / Statement</fullName>
                </value>
                <value>
                    <fullName>Appraisal</fullName>
                </value>
                <value>
                    <fullName>Credit Officer</fullName>
                </value>
                <value>
                    <fullName>Financial Statement</fullName>
                </value>
                <value>
                    <fullName>Insurance Agent</fullName>
                </value>
                <value>
                    <fullName>Internal Valuation</fullName>
                </value>
                <value>
                    <fullName>Inventory Report</fullName>
                </value>
                <value>
                    <fullName>Invoice / Bill of Sale</fullName>
                </value>
                <value>
                    <fullName>Real Estate Abundance of Caution</fullName>
                </value>
                <value>
                    <fullName>Receivables Aging</fullName>
                </value>
                <value>
                    <fullName>Real Estate Evaluation</fullName>
                </value>
                <value>
                    <fullName>Real Estate Restricted Appraisal</fullName>
                </value>
                <value>
                    <fullName>Third Party Source</fullName>
                </value>
                <value>
                    <fullName>Valuation Service Vendor</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LLC_BI__Valuation_Type__c</fullName>
        <description>A picklist field used to capture the potential types of collateral valuation. This would be entered by the user when a new valuation is entered. No default value.</description>
        <inlineHelpText>The potential types of collateral valuation</inlineHelpText>
        <label>Valuation Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Actual Cash Value</fullName>
                </value>
                <value>
                    <fullName>As Complete Value</fullName>
                </value>
                <value>
                    <fullName>As Is Value</fullName>
                </value>
                <value>
                    <fullName>As Stabilized Value</fullName>
                </value>
                <value>
                    <fullName>Balance Sheet</fullName>
                </value>
                <value>
                    <fullName>Book Value</fullName>
                </value>
                <value>
                    <fullName>Cash Balance</fullName>
                </value>
                <value>
                    <fullName>Contents Value</fullName>
                </value>
                <value>
                    <fullName>Fair Market Value - Real Estate</fullName>
                </value>
                <value>
                    <fullName>Fair Market Value - Equipment / Transportation</fullName>
                </value>
                <value>
                    <fullName>Net Orderly Liquidation Value</fullName>
                </value>
                <value>
                    <fullName>Orderly Liquidation Value</fullName>
                </value>
                <value>
                    <fullName>Preliminary Value</fullName>
                </value>
                <value>
                    <fullName>Purchase Price</fullName>
                </value>
                <value>
                    <fullName>Replacement Cost Value</fullName>
                </value>
                <value>
                    <fullName>Waived Value</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LLC_BI__lookupKey__c</fullName>
        <description>The field is optional. If populated the value must be unique across all the records of this type. The field typically contains an external identifier that is used to associate the record with its matching record in an external system. The field can also be used to efficiently associate related records, when importing data into nCino, without the need to know the internal ID for the record. For more information, refer to https://developer.salesforce.com/docs/atlas.en-us.apexcode.meta/apexcode/langCon_apex_dml_nested_object.htm.</description>
        <encryptionScheme>None</encryptionScheme>
        <externalId>true</externalId>
        <label>lookupKey</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>Collateral Type</label>
    <listViews>
        <fullName>LLC_BI__All</fullName>
        <columns>NAME</columns>
        <columns>LLC_BI__Type__c</columns>
        <columns>LLC_BI__Subtype__c</columns>
        <columns>LLC_BI__Collateral_Code__c</columns>
        <columns>LLC_BI__Advance_Rate__c</columns>
        <columns>LLC_BI__Active__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Collateral Type Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Collateral Types</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>LLC_BI__Advance_Rate_should_not_be_null</fullName>
        <active>true</active>
        <description>Advance Rate should not be null.</description>
        <errorConditionFormula>ISNULL(LLC_BI__Advance_Rate__c)</errorConditionFormula>
        <errorMessage>Please enter an advance rate for the collateral type.</errorMessage>
    </validationRules>
</CustomObject>